Removed uneccesary clutter from the website
Uneccessary sections like GATE and JEE etc, updated social links

--- a/index.html
+++ b/index.html
@@ -68,23 +68,17 @@
 
 <!-- Some Popular Subjects -->
 	<div class="title">
-		<span>Popular Subjects on LearnEd</span>
+		<center><span>Popular Subjects on LearnEd</span></center>
 	</div>
 	<br><br>
-	<div class="course">
-		<center><div class="cbox">
-		<div class="det"><a href="subjects/jee.html"><img src="images/courses/book.png">JEE Preparation</a></div>
-		<div class="det"><a href="subjects/gate.html"><img src="images/courses/d1.png">GATE Preparation</a></div>
-		<div class="det"><a href="subjects/jee.html#sample_papers"><img src="images/courses/paper.png">Sample Papers</a></div>
-		<div class="det"><a href="subjects/quiz.html"><img src="images/courses/d1.png">Daily Quiz</a></div>
-		</div></center>
+	<div class="cour">
 		<div class="cbox">
 		<div class="det"><a href="subjects/computer_courses.html"><img src="images/courses/computer.png">Computer Courses</a></div>
 		<div class="det"><a href="subjects/computer_courses.html#data"><img src="images/courses/data.png">Data Structures</a></div>
 		<div class="det"><a href="subjects/computer_courses.html#algo"><img src="images/courses/algo.png">Algorithm</a></div>
 		<div class="det det-last"><a href="subjects/computer_courses.html#projects"><img src="images/courses/projects.png">Projects</a></div>
 		</div>
-	</div>
+	</divThe beautiful thing about learning is that no one can take it away from you.The only real failure in life is one not learned from
 
 	
 <!-- ABOUT -->
@@ -127,22 +121,59 @@
 		<center><p style="font-size: 50px; padding-top: 100px; padding-bottom: 60px;">We're the Creators</p></center>
 		<div class="totalcard">
 			<div class="card">
-				<center><img src="images/creator/roshan1.jpeg"></center>
-				<center><div class="card-title">Roshan Kumar</div>
+				<center><img src="images/creator/praveen.jpeg"></center>
+				<center><div class="card-title">Praveen Kumar Jaiswal</div>
 				<div id="detail">
 					<p>“ You can teach a student a lesson for a day; but if you can teach him to learn by creating curiosity, he will continue the learning process as long as he lives “</p>
 					<div class="duty"></div>
-					<a href="https://www.linkedin.com/in/roshan-kumar-a18b76179/" target="_blank"><button class="btn-roshan">Follow +</button></a>
+					<a href="https://www.linkedin.com/in/praveen-jaiswal-atlabinc/" target="_blank"><button class="btn-praveen">Follow +</button></a>
 				</div>
 				</center>
 			</div>
 			<div class="card">
-				<center><img src="images/creator/roshan2.jpeg"></center>
-				<center><div class="card-title">Roshan Kumar</div>
+				<center><img src="images/creator/dev.jpeg"></center>
+				<center><div class="card-title">Dev Chandna</div>
 				<div id="detail">
 					<p>“ Real education should consist of drawing the goodness and the best out of our own students. What better books can there be than the book of humanity “</p>
 					<div class="duty"></div>
-					<a href="https://www.linkedin.com/in/roshan-kumar-a18b76179/" target="_blank"><button class="btn-akhil">Follow +</button></a>
+					<a href="https://www.linkedin.com/in/roshan-kumar-a18b76179/" target="_blank"><button class="btn-dev">Follow +</button></a>
+				</div>
+				</center>
+			</div>
+			<div class="card">
+				<center><img src="images/creator/humanNotExist4.jpeg"></center>
+				<center><div class="card-title">N Karthik Akshaj</div>
+				<div id="detail">
+					<p>“ The beautiful thing about learning is that no one can take it away from you.The only real failure in life is one not learned from “</p>
+					<div class="duty"></div>
+					<a href="https://www.linkedin.com/in/roshan-kumar-a18b76179/" target="_blank"><button class="btn-akshaj">Follow +</button></a>
+				</div>
+				</center>
+			</div><div class="card">
+				<center><img src="images/creator/humanNotExist1.jpeg"></center>
+				<center><div class="card-title">Nimesh Dutt</div>
+				<div id="detail">
+					<p>“ Learning never exhausts the mind.Education is what survives when what has been learned has been forgotten. “</p>
+					<div class="duty"></div>
+					<a href="https://www.linkedin.com/in/roshan-kumar-a18b76179/" target="_blank"><button class="btn-nimesh">Follow +</button></a>
+				</div>
+				</center>
+			</div><div class="card">
+				<center><img src="images/creator/humanNotExist2.jpeg"></center>
+				<center><div class="card-title">Krishna Sumit</div>
+				<div id="detail">
+					<p>“ All of the top achievers I know are life-long learners. Looking for new skills, insights, and ideas. If they’re not learning, they’re not growing and not moving toward excellence. “</p>
+					<div class="duty"></div>
+					<a href="https://www.linkedin.com/in/roshan-kumar-a18b76179/" target="_blank"><button class="btn-krishna">Follow +</button></a>
+				</div>
+				</center>
+			</div><div class="card">
+				<center><img src="images/creator/humanNotExist3.jpeg"></center>
+				<center><div class="card-title">Manish Rawat</div>
+				<div id="detail">
+					<p>“ Education is the best friend. An educated person is respected everywhere. Education beats the beauty and the youth.Learning is never done without errors and defeat. “</p>
+					<div class="duty"></div>
+					<a href="https://www.linkedin.com/in/roshan-kumar-a18b76179/" target="_blank"><button class="btn-manish">Follow +</button></a>
 				</div>
 				</center>
 			</div>
@@ -156,12 +187,9 @@
 		<center><p style="font-size: 50px; padding: 100px; padding-bottom: 40px; color: #fff;">Services</p></center>
 		</div>
 		<a href="subjects/computer_courses.html"><div class="s-card"><img src="images/icon/computer-courses.png"><p>Free Online Computer Courses</p></div></a>
-		<a href="subjects/jee.html"><div class="s-card"><img src="images/icon/brainbooster.png"><p>Building Concepts for Competitive Exams</p></div></a>
 		<a href="#"><div class="s-card"><img src="images/icon/online-tutorials.png"><p>Online Video Lectures</p></div></a>
-		<a href="subjects/jee.html#sample_papers"><div class="s-card"><img src="images/icon/papers.jpg"><p>Sample Papers of Various Competitive Exams</p></div></a>
 		<a href="#"><div class="s-card"><img src="images/icon/p3.png"><p>Performance and Ranking Report</p></div></a>
 		<a href="#contactus_section"><div class="s-card"><img src="images/icon/discussion.png"><p>Discussion with Our Tutors & Mentors</p></div></a>
-		<a href="subjects/quiz.html"><div class="s-card"><img src="images/icon/q1.png"><p>Daily Brain Teasing Questions to Improve IQ</p></div></a>
 		<a href="#contactus_section"><div class="s-card"><img src="images/icon/help.png"><p>24x7 Online Support</p></div></a>
 	</div>
 
@@ -203,7 +231,7 @@
 		<div class="rev-card">
 			<div class="identity">
 				<img src="images/creator/humanNotExist3.jpg"><p>Devyn Sethi</p>
-				<h6>JEE</h6>
+				<h6>Javascript</h6>
 				<div class="rating"><img src="images/icon/star.png"><img src="images/icon/star.png"><img src="images/icon/star.png"><img src="images/icon/star.png"><img src="images/icon/star.png"></div>
 			</div>
 			<div class="rev-cont">
@@ -235,7 +263,7 @@
 		<div class="csec"></div>
 		<div class="back-contact">
 			<div class="cc">
-			<form action="mailto:roshank9419@gmail.com" method="post" enctype="text/plain">
+			<form action="mailto:LCS2022036@iiitl.ac.in" method="post" enctype="text/plain">
 				<label>First Name <span class="imp">*</span></label><label style="margin-left: 185px">Last Name <span class="imp">*</span></label><br>
 				<center>
 				<input type="text" name="" style="margin-right: 10px; width: 175px" required="required"><input type="text" name="lname" style="width: 175px" required="required"><br>
@@ -291,9 +319,10 @@
 					<a href="#"><img src="images/icon\ytube.png"></a>
 					<a href="#"><img src="images/icon\linkedin.png"></a>
 				</div><br><br>
-				<p class="rights-text">Copyright © 2021 Created By Roshan Kumar, Abhishek Dulat All Rights Reserved.</p>
-				<br><p><img src="images/icon/location.png"> Lovely Professional University<br>Phagwara, Punjab-144401</p><br>
-				<p><img src="images/icon/phone.png"> +91-1234-567-890<br><img src="images/icon/mail.png">&nbsp; learnedonline9419@gmail.com</p>
+				<p class="rights-text">Copyright © 2023 Created By Team KAMP IV , <br>
+					All Rights Reserved.</p>
+				<br><p><img src="images/icon/location.png"> Indian Institute Of Information Technology , Lucknow <br>Ahmamau,Lucknow - 226002</p><br>
+				<p><img src="images/icon/phone.png"> +91-1234-567-890<br><img src="images/icon/mail.png">&nbsp; KAMPIV@gmail.com</p>
 			</div>
 			<div class="right-col">
 				<h1 style="color: #fff">Our Newsletter</h1>
