--- a/subjects/computer_courses.html
+++ b/subjects/computer_courses.html
@@ -15,8 +15,6 @@
 			<a href="../index.html"><img src="../images/icon/logo.png" style="width: 120px;"></a></div>
 			<div class="switch-tab" id="switch-tab" onclick="switchTAB()"><img src="../images/icon/menu.png"></div>
 			<ul id="list-switch">
-				<li><a href="jee.html"><img src="../images/courses/d1.png" class="icon">JEE</a></li>
-				<li><a href="gate.html"><img src="../images/courses/paper.png" class="icon">GATE</a></li>
 				<li><a href="#"><img src="../images/courses/computer.png" class="icon">Computer Courses</a></li>
 				<li><a href="#data"><img src="../images/courses/data.png" class="icon">Data Structures</a></li>
 				<li><a href="#algo"><img src="../images/courses/algo.png" class="icon">Algorithm</a></li>
@@ -522,51 +520,6 @@
 		<a href="https://www.youtube.com/watch?v=uDwSnnhl1Ng" target="_blank">Click Here to Watch full playlist</a>
 	</div>
 
-<!-- PROJECTS -->
-	<div class="title2" id="projects">
-		<span>Browse Projects</span>
-		<div class="shortdesc2">
-			<p>Here you can find various Projects related to Web Deveopment, AI, Java Projects, etc</p>
-		</div>
-	</div>
-	<div class="project-panel">
-		<div class="project-card">
-			<img src="../images/projects/p1.jpg">
-			<div class="info">
-				<h4>Digi Library</h4><p>Interactive Library Management Software made using JAVA & MySQL</p>
-				<div class="download"><a href="https://github.com/roshan9419" target="_blank">Download</a></div>	
-			</div>
-		</div>
-		<div class="project-card">
-			<img src="../images/projects/p2.jpg">
-			<div class="info">
-				<h4>LearnEd</h4><p>It is an Educational Website made using HTML, CSS & JavaScript</p>
-				<div class="download"><a href="https://github.com/roshan9419" target="_blank">Download</a></div>
-			</div>
-		</div>
-		<div class="project-card">
-			<img src="../images/projects/p3.jpg">
-			<div class="info">
-				<h4>Photo Gallery</h4><p>This Website helps you to manage your Personal Photos developed using HTML, CSS & JavaScript</p>
-				<div class="download"><a href="https://github.com/roshan9419" target="_blank">Download</a></div>
-			</div>
-		</div>
-		<div class="project-card">
-			<img src="../images/projects/p4.jpg">
-			<div class="info">
-				<h4>Sports Fitness</h4><p>This Website helps you in your favorite Sports made using HTML, CSS & JavaScript</p>
-				<div class="download"><a href="https://github.com/roshan9419" target="_blank">Download</a></div>
-			</div>
-		</div>
-		<div class="project-card">
-			<img src="../images/projects/p5.jpg">
-			<div class="info">
-				<h4>Smart TMS</h4><p>This Software helps you to managen the records of Challans used in Traffic Management System made using C++</p>
-				<div class="download"><a href="https://github.com/roshan9419/smart_traffic" target="_blank">Download</a></div>
-			</div>
-		</div>
-
-	</div>
 
 <br><br><br><br><br>
 
@@ -583,9 +536,11 @@
 				<a href="#"><img src="../images/icon\ytube.png"></a>
 				<a href="#"><img src="../images/icon\linkedin.png"></a>
 			</div><br><br>
-			<p class="rights-text">Copyright © 2021 Created By Roshan Kumar, Abhishek Dulat All Rights Reserved.</p>
-			<br><p><img src="../images/icon/location.png"> Lovely Professional University<br>Phagwara, Punjab-144401</p><br>
-			<p><img src="../images/icon/phone.png"> +91-1234-567-890<br><img src="../images/icon/mail.png">&nbsp; learnedonline9419@gmail.com</p>
+			<p class="rights-text">Copyright © 2023 Created By Team KAMP IV ,
+				<br> All Rights Reserved.</p>
+			<br><p><img src="../images/icon/location.png">Indian Institute Of Information Technology , Lucknow <br>Ahmamau,Lucknow - 226002
+			</p><br>
+			<p><img src="../images/icon/phone.png"> +91-1234-567-890<br><img src="../images/icon/mail.png">&nbsp; KAMPIV@gmail.com</p>
 		</div>
 		<div class="right-col">
 			<h1 style="color: #fff">Our Newsletter</h1>
