Fixed broken profile image links and added extra TODOs
profile images are updated and added extra todo sections in TODO.todo file

Special thanks to @Dev for solving #0

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<link rel="shortcut icon" type="png" href="images/icon/favicon.png">
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Comaptible" content="IE=edge">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>LearnEd</title>
-	<meta name="desciption" content="">
+	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="script.js"></script>
@@ -141,7 +141,7 @@
 				</center>
 			</div>
 			<div class="card">
-				<center><img src="images/creator/humanNotExist4.jpeg"></center>
+				<center><img src="images/creator/humanNotExist4.jpg"></center>
 				<center><div class="card-title">N Karthik Akshaj</div>
 				<div id="detail">
 					<p>“ The beautiful thing about learning is that no one can take it away from you.The only real failure in life is one not learned from “</p>
@@ -150,7 +150,7 @@
 				</div>
 				</center>
 			</div><div class="card">
-				<center><img src="images/creator/humanNotExist1.jpeg"></center>
+				<center><img src="images/creator/humanNotExist1.jpg"></center>
 				<center><div class="card-title">Nimesh Dutt</div>
 				<div id="detail">
 					<p>“ Learning never exhausts the mind.Education is what survives when what has been learned has been forgotten. “</p>
@@ -159,7 +159,7 @@
 				</div>
 				</center>
 			</div><div class="card">
-				<center><img src="images/creator/humanNotExist2.jpeg"></center>
+				<center><img src="images/creator/humanNotExist2.jpg"></center>
 				<center><div class="card-title">Krishna Sumit</div>
 				<div id="detail">
 					<p>“ All of the top achievers I know are life-long learners. Looking for new skills, insights, and ideas. If they’re not learning, they’re not growing and not moving toward excellence. “</p>
@@ -168,7 +168,7 @@
 				</div>
 				</center>
 			</div><div class="card">
-				<center><img src="images/creator/humanNotExist3.jpeg"></center>
+				<center><img src="images/creator/humanNotExist3.jpg"></center>
 				<center><div class="card-title">Manish Rawat</div>
 				<div id="detail">
 					<p>“ Education is the best friend. An educated person is respected everywhere. Education beats the beauty and the youth.Learning is never done without errors and defeat. “</p>
@@ -211,7 +211,7 @@
 			<div class="rev-cont">
 				<p id="title">Review:</p>
 				<p id="content">
-					I did Java Fundamenetal course with Rishab Sir. It was a great experience. The brain teasers and assignments, actually the whole lot of content was really good. Some problems were challenging yet interesting. Was explained very well where ever I stuck...
+					I did Java Fundamental course with Rishab Sir. It was a great experience. The brain teasers and assignments, actually the whole lot of content was really good. Some problems were challenging yet interesting. Was explained very well where ever I stuck...
 				</p>
 			</div>
 		</div>
@@ -273,7 +273,7 @@
 				<label>Message <span class="imp">*</span></label><br>
 				<input type="text" name="message" style="width: 100%" required="required"><br>
 				<label>Additional Details</label><br>
-				<textarea name="addtional"></textarea><br>
+				<textarea name="additional"></textarea><br>
 				<button type="submit" id="csubmit">Send Message</button>
 			</form>
 			</div>
@@ -297,7 +297,7 @@
 				<label>Email</label><br>
 				<input type="email" name="mail" required="required"><br>
 				<label>Additional Details</label><br>
-				<textarea name="addtional"></textarea><br>
+				<textarea name="additional"></textarea><br>
 				<button type="submit" id="csubmit">Send Message</button>
 			</form>
 		</div>
