Few more clutter squashed like a hero
Thanks @akshaj for your contributions

--- a/subjects/computer_courses.html
+++ b/subjects/computer_courses.html
@@ -16,8 +16,6 @@
 			<div class="switch-tab" id="switch-tab" onclick="switchTAB()"><img src="../images/icon/menu.png"></div>
 			<ul id="list-switch">
 				<li><a href="#"><img src="../images/courses/computer.png" class="icon">Computer Courses</a></li>
-				<li><a href="#data"><img src="../images/courses/data.png" class="icon">Data Structures</a></li>
-				<li><a href="#algo"><img src="../images/courses/algo.png" class="icon">Algorithm</a></li>
 				<li><a href="#projects"><img src="../images/courses/projects.png" class="icon">Projects</a></li>
 			</ul>
 			<div class="search" id="search-switch">
@@ -38,32 +36,15 @@
 
 <!-- Some KeyWords related to Topic -->
 	<div class="course">
-		<div class="cbox">
 		<div class="det"><a href="#java">Java</a></div>
-		<div class="det"><a href="https://developer.android.com/">Android Development</a></div>
-		<div class="det"><a href="https://docs.oracle.com/javafx/2/get_started/fxml_tutorial.htm">FXML</a></div>
-		<div class="det"><a href="#c++">C++</a></div>
-		<div class="det"><a href="https://www.geeksforgeeks.org/introduction-of-compiler-design/">Compiler Designing</a></div>
-		<div class="det"><a href="https://www.coursera.org/specializations/game-design-and-development">Game Development</a></div>
-		<div class="det"><a href="#algo">Algorithm</a></div>
-		</div>
-		<div class="cbox">
-		<div class="det"><a href="#python">Python</a></div>
-		<div class="det"><a href="https://www.coursera.org/learn/machine-learning">Machine Learning</a></div>
-		<div class="det"><a href="https://en.wikipedia.org/wiki/Artificial_intelligence">Artificial Intelligence</a></div>
-		<div class="det"><a href="https://en.wikipedia.org/wiki/Network">Networking</a></div>
-		<div class="det"><a href="https://www.kaspersky.co.in/resource-center/definitions/what-is-cyber-security">Cyber Security</a></div>
-		<div class="det"><a href="https://www.eccouncil.org/ethical-hacking/">Ethical Hacking</a></div>
-		<div class="det"><a href="#data">Data Structures</a></div>
-		</div>
-		<div class="cbox">
-		<div class="det"><a href="#html_css">HTML and CSS</a></div>
-		<div class="det"><a href="https://www.udacity.com/course/full-stack-web-developer-nanodegree--nd0044">Full Stack Web Development</a></div>
-		<div class="det"><a href="https://uxplanet.org/what-is-ui-vs-ux-design-and-the-difference-d9113f6612de?gi=6d9d13f4cc95">UI Designing</a></div>
-		<div class="det"><a href="https://www.adobe.com/in/products/xd.html">Adobe XD</a></div>
-		<div class="det"><a href="https://www.sciencedirect.com/topics/computer-science/hardware-design">Hardware Designing</a></div>
-		<div class="det"><a href="#javascript">JavaScript</a></div>
 		<div class="det"><a href="#html_css">Bootstrap</a></div>
+		<div class="det"><a href="#python">Python</a></div>
+		<div class="det"><a href="#c++">C++</a></div>
+		<div class="det"><a href="#javascript">JavaScript</a></div>
+		<div class="det"><a href="#html_css">HTML and CSS</a></div>
+		<div class="det"><a
+				href="https://www.udacity.com/course/full-stack-web-developer-nanodegree--nd0044">Full
+				Stack Web Development</a></div>
 		</div>
 	</div>
 
@@ -93,14 +74,6 @@
 			<div class="dcard">
 				<div class="fpart"><img src="../images/courses/web-course.jpg"></div>
 				<a href="#html_css"><div class="spart">6 Courses <img src="../images/icon/dropdown.png"></div></a>
-			</div>
-			<div class="dcard">
-				<div class="fpart"><img src="../images/courses/data-course.jpg"></div>
-				<a href="#data"><div class="spart">2 Courses <img src="../images/icon/dropdown.png"></div></a>
-			</div>
-			<div class="dcard">
-				<div class="fpart"><img src="../images/courses/algo-course.jpg"></div>
-				<a href="#algo"><div class="spart">1 Courses <img src="../images/icon/dropdown.png"></div></a>
 			</div>
 		</div>
 	</center>
