Gallery is finally here stable
Squashed some bugs in search page, removed more clutter from computer_course.html and
and GALLERY is there

Images used are used for educational purposes. We respect the IP rights of original creators.
If your creation/images are used in accident, you can raise a issue request to get it removed.

Thanks to @Manish and @Krishna

--- a/search/search.html
+++ b/search/search.html
@@ -23,7 +23,7 @@
     <div class="search-prompt">
         <h1 class="search-heading">Search Courses</h1>
 
-        <form class="search-form form my-2 my-lg-0">
+        <form class="search-form form my-2 my-lg-0" action="#" >
             <div class="row">
                 <div class="col-sm-1">
                     
@@ -32,19 +32,13 @@
                     <input class="search-input form-control mr-sm-2 rounded-pill" type="text" placeholder="Search">
                 </div>
                 <div class="col-sm-1">
-                    <button class="btn btn-primary my-2 my-sm-0 rounded-pill" type="submit" onclick="return search()">Search</button>
+                    <button class="btn btn-primary my-2 my-sm-0 rounded-pill" onclick="return search()">Search</button>
                 </div>
             </div>
         </form>
     </div>
 
     <div class="search-results"></div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="search.js"></script>
 </body>
 </html>
