--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -1,27 +1,122 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="gallery.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
+  <title>gallery</title>
 </head>
 <body>
-    
-    <marquee direction = "right" scrollmount="2"><h1>Gallery</h1></marquee>
-    <div class="container">
-        <div class="gallery">
-            <img src="imgs/img1.jpg" alt="">
-            <img src="imgs/img2.jpg" alt="">
-            <img src="imgs/img3.jpg" alt="">
-            <img src="imgs/img4.jpg" alt="">
-            <img src="imgs/img5.jpg" alt="">
-            <img src="imgs/img6.jpg" alt="">
-            <img src="imgs/img7.jpg" alt="">
-            <img src="imgs/img8.jpg" alt="">
-            <img src="imgs/img1.jpg" alt="">
-            <img src="imgs/img2.jpg" alt="">
-        </div>
+    <header id="header">
+		<nav>
+			<div class="logo"><img src="../images//icon/logo.png" alt="logo"></div>
+			<ul>
+				<li><a class="active" href="">Home</a></li>
+				<li><a href="#portfolio_section">Portfolio</a></li>
+				<li><a href="#team_section">Team</a></li>
+				<li><a href="#services_section">Services</a></li>
+				<li><a href="#contactus_section">Contact</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+			</ul>
+			<div class="srch"><input type="text" class="search" placeholder="Search here..."><img src="../images//icon/search.png" alt="search" onclick=slide()></div>
+			<a class="get-started" href="login.html">Get Started</a>
+			<img src="../images//icon/menu.png" class="menu" onclick="sideMenu(0)" alt="menu">
+		</nav>
+        <div class="side-menu" id="side-menu">
+			<div class="close" onclick="sideMenu(1)"><img src="../images//icon/close.png" alt=""></div>
+			<div class="user">
+				<img src="/refo1/../images//creator/roshan.jpeg" alt="Username">
+				<p>roshank9419</p>
+			</div>
+			<ul>
+				<li><a href="#about_section">About</a></li>
+				<li><a href="#portfolio_section">Portfolio</a></li>
+				<li><a href="#team_section">Team</a></li>
+				<li><a href="#services_section">Services</a></li>
+				<li><a href="#contactus_section">Contact</a></li>
+				<li><a href="#feedBACK">Feedback</a></li>
+			</ul>
+		</div>
+        <section class="wrapper">
+            <i class="fa-solid fa-arrow-left button" id="prev"></i>
+            <div class="image-container">
+              <div class="carousel">
+                <img style="height:auto;"src="../images/\creator\ak1.jpg" alt="" >
+                <img src="../images/\creator\dev1.jpeg" alt="" >
+                <img src="../images//imgs/img3.jpg" alt="">
+                <img src="../images//imgs/img4.jpg" alt="">
+                <img style="height:auto;"src="../images//imgs/2.jpg" alt="">
+                <img src="../images//imgs/img5.jpg" alt="">
+                <img src="../images//imgs/img6.jpg" alt="">
+                <img src="../images//imgs/img7.jpg" alt="">
+                <img src="../images//imgs/img8.jpg" alt="">
+                <img style="height:auto;"src="refo1\../images/\imgs\1jpg.jpg" alt="">
+                <img style="height:auto;"src="../images//imgs/4.jpg" alt="">
+                <img style="height:auto;"src="../images//imgs/3.jpg" alt="">
+                <img src="../images//imgs/img2.jpg" alt="">
+                <img style="height:auto;"src="../images//imgs/5.jpg" alt="">
+                <img style="height:auto;"src="../images//imgs/6.jpg" alt="">
+                <img style="height:auto;"src="../images//imgs/7.jpg" alt="">
+                <img style="height:auto;"src="../images//imgs/8.jpg" alt="">
+              </div>
+              <i class="fa-solid fa-arrow-right button" id="next"></i>
+            </div>
+          </section>
+    <div class="gallery">
+        <img src="../images//imgs\img1.jpg" alt="">
+        <img style="height:214px;"src="../images//imgs/1jpg.jpg" alt="">
+        <img src="../images//imgs/img2.jpg" alt="">
+        <img src="../images//imgs/img3.jpg" alt="">
+        <img src="../images//imgs/img4.jpg" alt="">
+        <img style="height:214px;"src="../images//imgs/2.jpg" alt="">
+        <img src="../images//imgs/img5.jpg" alt="">
+        <img src="../images//imgs/img6.jpg" alt="">
+        <img src="../images//imgs/img7.jpg" alt="">
+        <img src="../images//imgs/img8.jpg" alt="">
+        <img style="height:214px;"src="../images//imgs/1jpg.jpg" alt="">
+        <img style="height:214px;"src="../images//imgs/4.jpg" alt="">
+        <img style="height:214px;"src="../images//imgs/3.jpg" alt="">
+        <img src="../images//imgs/img2.jpg" alt="">
+        <img style="height:214px;"src="../images//imgs/5.jpg" alt="">
+        <img style="height:214px;"src="../images//imgs/6.jpg" alt="">
+        <img style="height:214px;"src="../images//imgs/7.jpg" alt="">
+        <img style="height:214px;"src="../images//imgs/8.jpg" alt="">
     </div>
-    <script src="gallery.js"></script>
+
+<footer>
+  <div class="footer-container">
+    <div class="left-col">
+      <img src="../images//icon/logo - Copy.png" style="width: 200px;">
+      <div class="logo"></div>
+      <div class="social-media">
+        <a href="#"><img src="../images//icon\fb.png"></a>
+        <a href="#"><img src="../images//icon\insta.png"></a>
+        <a href="#"><img src="../images//icon\tt.png"></a>
+        <a href="#"><img src="../images//icon\ytube.png"></a>
+        <a href="#"><img src="../images//icon\linkedin.png"></a>
+      </div><br><br>
+      <p class="rights-text">Copyright © 2023 Created By Team KAMP IV , <br>
+        All Rights Reserved.</p>
+      <br><p><img src="../images//icon/location.png"> Indian Institute Of Information
+        Technology , Lucknow <br>Ahmamau,Lucknow - 226002</p><br>
+      <p><img src="../images//icon/phone.png"> +91-1234-567-890<br><img
+          src="../images//icon/mail.png">&nbsp; KAMPIV@gmail.com</p>
+    </div>
+    <div class="right-col">
+      <h1 style="color: #fff">Our Newsletter</h1>
+      <div class="border"></div><br>
+      <p>Enter Your Email to get our News and updates.</p>
+      <form class="newsletter-form">
+        <input class="txtb" type="email" placeholder="Enter Your Email">
+        <input class="btn" type="submit" value="Submit">
+      </form>
+    </div>
+  </div>
+</footer>
+</header>
+
+<script src="gallery.js"></script>
 </body>
 </html>
