--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -13,15 +13,11 @@
 		<nav>
 			<div class="logo"><img src="../images//icon/logo.png" alt="logo"></div>
 			<ul>
-				<li><a class="active" href="">Home</a></li>
-				<li><a href="#portfolio_section">Portfolio</a></li>
-				<li><a href="#team_section">Team</a></li>
-				<li><a href="#services_section">Services</a></li>
-				<li><a href="#contactus_section">Contact</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+				<li><a  href="../index.html">Home</a></li>
+        <li><a class="active" href="gallery.html">Gallery</a></li>
 			</ul>
 			<div class="srch"><input type="text" class="search" placeholder="Search here..."><img src="../images//icon/search.png" alt="search" onclick=slide()></div>
-			<a class="get-started" href="login.html">Get Started</a>
+			<a class="get-started" href="../login.html">Get Started</a>
 			<img src="../images//icon/menu.png" class="menu" onclick="sideMenu(0)" alt="menu">
 		</nav>
         <div class="side-menu" id="side-menu">
