MEGA UPDATE : ChatGPT API support finally dropped in, About Us Contact Us Page added
ChatGPT is finally with us, you need to get API key which you can get easily from
platform.openai.com and put it in chatgpt/chatgpt.js for apikey variable. Thanks @rootCircle

About Us page is added Thanks to @ Dev

Contact Us page is added Thanks to @ Nimesh

All this was incomplete without bug squashing, so we like usual we fixed few bugs,
removed/repaired broken links/urls and improved some designs

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 					<li><a href="#team_section">Team</a></li>
 					<li><a href="#services_section">Services</a></li>
 					<li><a href="#contactus_section">Contact</a></li>
+					<li><a href="gallery/gallery.html">Gallery</a></li>
 				</ul>
-				<div class="srch"><input type="text" class="search" placeholder="Search
-						here..."><img src="images/icon/search.png" alt="search" onclick=slide()></div>
+				<div class="srch" ><a href="search/search.html"><button class="btn55" >SEARCH</button></a></div>
 				<a class="get-started" href="login.html">Get Started</a>
 				<img src="images/icon/menu.png" class="menu" onclick="sideMenu(0)"
 					alt="menu">
@@ -46,11 +46,6 @@
 						of knowledge, skills, values, beliefs, and habits. Educational methods
 						include teaching, training, storytelling, discussion and directed
 						research!</h5>
-					<!-- <div class="play">
-						<img src="images/icon/play.png" alt="play"><span><a
-								href="https://www.youtube.com/watch?v=KFyrgDO1WXk" target="_blank">Watch
-								Now</a></span>
-					</div> -->
 				</div>
 				<div class="svg-image">
 					<img src="images/extra/svg1.jpg" alt="svg">
@@ -84,15 +79,10 @@
 			<div class="cbox">
 				<div class="det"><a href="subjects/computer_courses.html"><img
 							src="images/courses/computer.png">Computer Courses</a></div>
-				<!-- <div class="det"><a href="subjects/computer_courses.html#data"><img
-							src="images/courses/data.png">Data Structures</a></div>
-				<div class="det"><a href="subjects/computer_courses.html#algo"><img
-							src="images/courses/algo.png">Algorithm</a></div> -->
 				<div class="det det-last"><a href="subjects/computer_courses.html#projects"><img
 							src="images/courses/projects.png">Projects</a></div>
 			</div>
-		</divThe beautiful thing about learning is that no one can take it away from
-			you.The only real failure in life is one not learned from
+		</div>
 
 
 		<!-- ABOUT -->
@@ -149,7 +139,7 @@
 					60px;">We're the Creators</p></center>
 			<div class="totalcard">
 				<div class="card">
-					<center><img src="images/creator/preal.jpeg"></center>
+					<center><img src="images/creator/PKJ.jpeg"></center>
 					<center><div class="card-title">Praveen Kumar Jaiswal</div>
 						<div id="detail">
 							<p>“ You can teach a student a lesson for a day; but if you can teach him
@@ -186,7 +176,7 @@
 						</div>
 					</center>
 				</div><div class="card">
-					<center><img src="images/creator/nd1.jpg"></center>
+					<center><img src="images/creator/N.jpeg"></center>
 					<center><div class="card-title">Nimesh Dutt</div>
 						<div id="detail">
 							<p>“ Learning never exhausts the mind.Education is what survives when
@@ -197,7 +187,7 @@
 						</div>
 					</center>
 				</div><div class="card">
-					<center><img src="images/creator/humanNotExist2.jpg"></center>
+					<center><img src="images/creator/KS.jpeg"></center>
 					<center><div class="card-title">Krishna Sumit</div>
 						<div id="detail">
 							<p>“ All of the top achievers I know are life-long learners. Looking for
@@ -209,7 +199,7 @@
 						</div>
 					</center>
 				</div><div class="card">
-					<center><img src="images/creator/humanNotExist3.jpg"></center>
+					<center><img src="images/creator/M.jpeg"></center>
 					<center><div class="card-title">Manish Rawat</div>
 						<div id="detail">
 							<p>“ Education is the best friend. An educated person is respected
@@ -231,15 +221,11 @@
 				<center><p style="font-size: 50px; padding: 100px; padding-bottom: 40px;
 						color: #fff;">Services</p></center>
 			</div>
-			<a href=""><div class="s-card"><img src="images/icon/online-tutorials.png"><p>Online
-						Video Lectures (Python)</p></div></a>
-			<a href=""><div class="s-card"><img src="images/icon/online-tutorials.png"><p>Online
-						Video Lectures (C++)</p></div></a>
-			<a href=""><div class="s-card"><img src="images/icon/online-tutorials.png"><p>Online
+			<a href="subjects/computer_courses.html"><div class="s-card"><img src="images/icon/online-tutorials.png"><p>Online
 						Video Lectures (HTML and CSS)</p></div></a>
-			<a href=""><div class="s-card"><img src="images/icon/online-tutorials.png"><p>Online
+			<a href="subjects/computer_courses.html"><div class="s-card"><img src="images/icon/online-tutorials.png"><p>Online
 						Video Lectures (Java Script)</p></div></a>
-			<a href=""><div class="s-card"><img src="images/icon/online-tutorials.png"><p>Online
+			<a href="subjects/computer_courses.html"><div class="s-card"><img src="images/icon/online-tutorials.png"><p>Online
 						Video Lectures (Bootstrap)</p></div></a>
 			<a href="subjects/computer_courses.html"><div class="s-card"><img
 						src="images/icon/computer-courses.png"><p>Free Online Computer Courses</p></div></a>
