--- a/subjects/computer_courses.html
+++ b/subjects/computer_courses.html
@@ -94,58 +94,57 @@
 			<center>
 				<div class="ccardbox2">
 					<div class="dcard2"><span class="tag">1/8</span>
-						<div class="fpart2"><img src="../images/sc/html.jpg">
-							<iframe src="https://www.youtube.com/embed/TKYsuU86-DQ" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/v8jDnBYc0bs">
+								<img src="../images/sc/html.jpg">
+							</a>
 						</div>
 					</div>
 					<div class="dcard2"><span class="tag">2/8</span>
 						<div class="fpart2">
-							<a href="https://youtu.be/4OMdzHnys9o"><img src="../images/sc/html.jpg"></a>
-						</div>
+						<a href="https://youtu.be/4OMdzHnys9o">
+						<img src="../images/sc/html.jpg">
+						
+					</a>
+				</div>
 					</div>
 					<div class="dcard2"><span class="tag">3/8</span>
-						<div class="fpart2"><img src="../images/sc/html.jpg">
-							<iframe src="https://www.youtube.com/embed/TKYsuU86-DQ" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/pAl7TrV7gpg">
+								<img src="../images/sc/html.jpg">
+							</a>
 						</div>
 					</div>
 					<div class="dcard2"><span class="tag">4/8</span>
-						<div class="fpart2"><img src="../images/sc/html.jpg">
-							<iframe src="https://www.youtube.com/embed/TKYsuU86-DQ" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/DNkRpjBRuro">
+								<img src="../images/sc/html.jpg"></a>
 						</div>
 					</div>
 
 					<div class="dcard2"><span class="tag">5/8</span>
-						<div class="fpart2"><img src="../images/sc/html.jpg">
-							<iframe src="https://www.youtube.com/embed/TKYsuU86-DQ" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/_ir9du6fq4Q">
+								<img src="../images/sc/html.jpg"></a>
 						</div>
 					</div>
 					<div class="dcard2"><span class="tag">6/8</span>
-						<div class="fpart2"><img src="../images/sc/html.jpg">
-							<iframe src="https://www.youtube.com/embed/TKYsuU86-DQ" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/6xgLY8kSXO8">
+								<img src="../images/sc/html.jpg">
+							</a>
 						</div>
 					</div>
 					<div class="dcard2"><span class="tag">7/8</span>
-						<div class="fpart2"><img src="../images/sc/html.jpg">
-							<iframe src="https://www.youtube.com/embed/TKYsuU86-DQ" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/0PUmPHkQfcE">
+								<img src="../images/sc/html.jpg"></a>
 						</div>
 					</div>
 					<div class="dcard2"><span class="tag">8/8</span>
-						<div class="fpart2"><img src="../images/sc/html.jpg">
-							<iframe src="https://www.youtube.com/embed/TKYsuU86-DQ" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/5e0wuvhxLk4">
+								<img src="../images/sc/html.jpg"></a>
 						</div>
 					</div>
 				</div>
@@ -167,60 +166,59 @@
 			<center>
 				<div class="ccardbox2">
 					<div class="dcard2"><span class="tag">1/8</span>
-						<div class="fpart2"><img src="../images/sc/css.jpg">
-							<iframe src="https://www.youtube.com/embed/TKYsuU86-DQ" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/v8jDnBYc0bs">
+								<img src="../images/sc/css.jpg"></a>
 						</div>
 					</div>
 					<div class="dcard2"><span class="tag">2/8</span>
-						<div class="fpart2"><img src="../images/sc/css.jpg">
-							<iframe src="https://www.youtube.com/embed/TKYsuU86-DQ" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/4OMdzHnys9o">
+								<img src="../images/sc/css.jpg">
+							</a>
 						</div>
 					</div>
 					<div class="dcard2"><span class="tag">3/8</span>
-						<div class="fpart2"><img src="../images/sc/css.jpg">
-							<iframe src="https://www.youtube.com/embed/TKYsuU86-DQ" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/pAl7TrV7gpg">
+								<img src="../images/sc/css.jpg">
+							</a>
 						</div>
 					</div>
 					<div class="dcard2"><span class="tag">4/8</span>
-						<div class="fpart2"><img src="../images/sc/css.jpg">
-							<iframe src="https://www.youtube.com/embed/TKYsuU86-DQ" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/DNkRpjBRuro">
+								<img src="../images/sc/css.jpg">
+							</a>
 						</div>
 					</div>
 
 					<div class="dcard2"><span class="tag">5/8</span>
-						<div class="fpart2"><img src="../images/sc/css.jpg">
-							<iframe src="https://www.youtube.com/embed/TKYsuU86-DQ" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/_ir9du6fq4Q">
+								<img src="../images/sc/css.jpg">
+							</a>
 						</div>
 					</div>
 					<div class="dcard2"><span class="tag">6/8</span>
-						<div class="fpart2"><img src="../images/sc/css.jpg">
-							<iframe src="https://www.youtube.com/embed/TKYsuU86-DQ" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/6xgLY8kSXO8">
+								<img src="../images/sc/css.jpg">
+							</a>
 						</div>
 					</div>
 					<div class="dcard2"><span class="tag">7/8</span>
-						<div class="fpart2"><img src="../images/sc/css.jpg">
-							<iframe src="https://www.youtube.com/embed/TKYsuU86-DQ" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/0PUmPHkQfcE">
+								<img src="../images/sc/css.jpg">
+							</a>
 						</div>
 					</div>
 					<div class="dcard2"><span class="tag">8/8</span>
-						<div class="fpart2"><img src="../images/sc/css.jpg">
-							<iframe src="https://www.youtube.com/embed/TKYsuU86-DQ" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/5e0wuvhxLk4">
+								<img src="../images/sc/css.jpg">
+							</a>
 						</div>
 					</div>
 				</div>
@@ -243,60 +241,60 @@
 			<center>
 				<div class="ccardbox2">
 					<div class="dcard2"><span class="tag">1/8</span>
-						<div class="fpart2"><img src="../images/sc/bootstrap.jpg">
-							<iframe src="https://www.youtube.com/embed/TKYsuU86-DQ" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/v8jDnBYc0bs">
+								<img src="../images/sc/bootstrap.jpg">
+							</a>
 						</div>
 					</div>
 					<div class="dcard2"><span class="tag">2/8</span>
-						<div class="fpart2"><img src="../images/sc/bootstrap.jpg">
-							<iframe src="https://www.youtube.com/embed/TKYsuU86-DQ" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/4OMdzHnys9o">
+								<img src="../images/sc/bootstrap.jpg">
+							</a>
 						</div>
 					</div>
 					<div class="dcard2"><span class="tag">3/8</span>
-						<div class="fpart2"><img src="../images/sc/bootstrap.jpg">
-							<iframe src="https://www.youtube.com/embed/TKYsuU86-DQ" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/pAl7TrV7gpg">
+								<img src="../images/sc/bootstrap.jpg">
+							</a>
 						</div>
 					</div>
 					<div class="dcard2"><span class="tag">4/8</span>
-						<div class="fpart2"><img src="../images/sc/bootstrap.jpg">
-							<iframe src="https://www.youtube.com/embed/TKYsuU86-DQ" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/DNkRpjBRuro">
+								<img src="../images/sc/bootstrap.jpg">
+							</a>
 						</div>
 					</div>
 
 					<div class="dcard2"><span class="tag">5/8</span>
-						<div class="fpart2"><img src="../images/sc/bootstrap.jpg">
-							<iframe src="https://www.youtube.com/embed/TKYsuU86-DQ" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/_ir9du6fq4Q">
+								<img src="../images/sc/bootstrap.jpg">
+							</a>
 						</div>
 					</div>
 					<div class="dcard2"><span class="tag">6/8</span>
-						<div class="fpart2"><img src="../images/sc/bootstrap.jpg">
-							<iframe src="https://www.youtube.com/embed/TKYsuU86-DQ" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/6xgLY8kSXO8">
+								<img src="../images/sc/bootstrap.jpg">
+							</a>
 						</div>
 					</div>
 					<div class="dcard2"><span class="tag">7/8</span>
-						<div class="fpart2"><img src="../images/sc/bootstrap.jpg">
-							<iframe src="https://www.youtube.com/embed/TKYsuU86-DQ" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/0PUmPHkQfcE">
+								<img src="../images/sc/bootstrap.jpg">
+							</a>
 						</div>
 					</div>
 					<div class="dcard2"><span class="tag">8/8</span>
-						<div class="fpart2"><img src="../images/sc/bootstrap.jpg">
-							<iframe src="https://www.youtube.com/embed/TKYsuU86-DQ" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/5e0wuvhxLk4">
+								<img src="../images/sc/bootstrap.jpg">
+							</a>
 						</div>
 					</div>
 				</div>
@@ -319,60 +317,60 @@
 			<center>
 				<div class="ccardbox2">
 					<div class="dcard2"><span class="tag">1/8</span>
-						<div class="fpart2"><img src="../images/courses/javascript-course.jpg">
-							<iframe src="https://www.youtube.com/embed/uDwSnnhl1Ng" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/uDwSnnhl1Ng">
+								<img src="../images/courses/javascript-course.jpg">
+							</a>
 						</div>
 					</div>
 					<div class="dcard2"><span class="tag">2/8</span>
-						<div class="fpart2"><img src="../images/courses/javascript-course.jpg">
-							<iframe src="https://www.youtube.com/embed/uDwSnnhl1Ng" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/uxWO8Sd8PoY">
+								<img src="../images/courses/javascript-course.jpg">
+							</a>
 						</div>
 					</div>
 					<div class="dcard2"><span class="tag">3/8</span>
-						<div class="fpart2"><img src="../images/courses/javascript-course.jpg">
-							<iframe src="https://www.youtube.com/embed/uDwSnnhl1Ng" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/_GxpmQ54aqg">
+								<img src="../images/courses/javascript-course.jpg">
+							</a>
 						</div>
 					</div>
 					<div class="dcard2"><span class="tag">4/8</span>
-						<div class="fpart2"><img src="../images/courses/javascript-course.jpg">
-							<iframe src="https://www.youtube.com/embed/uDwSnnhl1Ng" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/I5xesmmiREU">
+								<img src="../images/courses/javascript-course.jpg">
+							</a>
 						</div>
 					</div>
 
 					<div class="dcard2"><span class="tag">5/8</span>
-						<div class="fpart2"><img src="../images/courses/javascript-course.jpg">
-							<iframe src="https://www.youtube.com/embed/uDwSnnhl1Ng" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/vWX2eoi3bOc">
+								<img src="../images/courses/javascript-course.jpg">
+							</a>
 						</div>
 					</div>
 					<div class="dcard2"><span class="tag">6/8</span>
-						<div class="fpart2"><img src="../images/courses/javascript-course.jpg">
-							<iframe src="https://www.youtube.com/embed/uDwSnnhl1Ng" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/85kQIRkTdRQ">
+								<img src="../images/courses/javascript-course.jpg">
+							</a>
 						</div>
 					</div>
 					<div class="dcard2"><span class="tag">7/8</span>
-						<div class="fpart2"><img src="../images/courses/javascript-course.jpg">
-							<iframe src="https://www.youtube.com/embed/uDwSnnhl1Ng" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/Hrd3SfCCXZw">
+								<img src="../images/courses/javascript-course.jpg">
+							</a>
 						</div>
 					</div>
 					<div class="dcard2"><span class="tag">8/8</span>
-						<div class="fpart2"><img src="../images/courses/javascript-course.jpg">
-							<iframe src="https://www.youtube.com/embed/uDwSnnhl1Ng" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope;
-								picture-in-picture" allowfullscreen></iframe>
+						<div class="fpart2">
+							<a href="https://youtu.be/ULNJSTSJc7s">
+								<img src="../images/courses/javascript-course.jpg">
+							</a>
 						</div>
 					</div>
 				</div>
