Fixed some bugs | openai keys are now in separate file
Fixed form autoreload on submit in chatgpt and search Thanks to @rootCircle
Gallery background fixes and pop up in gallery page is now working Thanks to @krishnasumit155
Doc template is being updated and now look more beautiful Thanks to @krishnasumit155
Contact Us and About Us pages are updated Thanks to @ akshaj and @manishiiitl1261

--- a/contactus/contactus.html
+++ b/contactus/contactus.html
@@ -140,7 +140,7 @@ input[type=submit]:hover {
     <div class="container">
         <h1>Contact Us</h1>
         <div class="person">
-            <img src="person1.jpg" alt="Person 1">
+            <img src="../images/creator/ak1.jpg" alt="Person 1">
             <div>
                 <h2>Person 1</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus, magna eu sagittis eleifend, quam
