--- a/chatgpt/chatgpt.html
+++ b/chatgpt/chatgpt.html
@@ -16,9 +16,9 @@
     </nav>
 
     <h1>refdocs.io + CHATGPT : When you want to learn more</h1>
-    <form action="#" id="chat-form">
+    <form action="#" id="chat-form" method="post">
         <input type="text" id="prompt-input">
-        <button onclick="handleRequest()">Send Request</button>
+        <button type="submit" name="sendRequest" onclick="handleRequest(event)">Send Request</button>
     </form>
 
     <div id="response">
@@ -27,9 +27,10 @@
     </pre>
     </div>
 
-
+    <script src="chatgpt_config.js"></script>
     <script>
-        async function handleRequest() {
+        async function handleRequest(event) {
+            event.preventDefault();
             var resp = document.querySelector(".response-text");
             resp.textContent = "Loading....Please be patient";
             const prompt = document.getElementById('prompt-input').value;
