--- a/search/search.html
+++ b/search/search.html
@@ -23,7 +23,7 @@
     <div class="search-prompt">
         <h1 class="search-heading">Search Courses</h1>
 
-        <form class="search-form form my-2 my-lg-0" action="#" >
+        <form class="search-form form my-2 my-lg-0" action="#" method="post">
             <div class="row">
                 <div class="col-sm-1">
                     
@@ -32,7 +32,7 @@
                     <input class="search-input form-control mr-sm-2 rounded-pill" type="text" placeholder="Search">
                 </div>
                 <div class="col-sm-1">
-                    <button class="btn btn-primary my-2 my-sm-0 rounded-pill" onclick="return search()">Search</button>
+                    <button class="btn btn-primary my-2 my-sm-0 rounded-pill" onclick="return search(event)">Search</button>
                 </div>
             </div>
         </form>
