Updated About Us page
Thanks to @manishiiitl1261

--- a/aboutus/about_web.html
+++ b/aboutus/about_web.html
@@ -16,65 +16,91 @@
 				<div class="switch-tab" id="switch-tab" onclick="switchTAB()"><img
 						src="../images/icon/menu.png"></div>
 				<ul id="list-switch">
-					<li><a href="../subjects/computer_courses.html" ><img src="home.png" class="icon">Home</a></li>
+					<li><a href="../index.html" ><img src="home.png" class="icon">Home</a></li>
 					<li><a href="about_web.html"><img src="group.png"
-								class="icon">About Us</a></li>
+					class="icon">About Us</a></li>
 				</ul>
-				<div class="search" id="search-switch">
-					<input type="search" placeholder="Search" class="srch">
-                    <button id="srchbtn"><img src="../images/icon/search.png"></button>
-				</div>
+					<div class="srch" ><a href="../search/search.html"><button class="btn55" >SEARCH</button></a></div>
+					<a class="get-started" href="../login.html">Get Started</a>
+					
 			</div>
             <br><br>
         </header>
-            <div class="head-container">
+		<h1 class="head-container">ABOUT US</h1>
+<!-- <div class="head-container"> -->
 			<div class="manish">
-            <h1><mark>ABOUT_US</mark></h1>
-            <div style="border:1px solid gray; margin:20px 3px 3px 37px ;">
-        <p>uruabjhabjghbjh bbhbhabe   jyegauyg hu  i  uiaugiuadg i iu ih iurgiuriuh r uh ug hjf  hgjfjsgjjg  hgj j   iu u huhajgba  jjkjgalgjagkjdkjkgh  ggjustify-content- oht uhiuiu
-                 ui huehiu u iuiuu iuiu u r uhiu  g h
-                  ghjgg
-            </p>
-        </div>
-            </div>
-                <div class="svg-image">
-					<img src="../images\imgs\sd.png" alt="svg">
-				</div>
+            <div style="margin:0px 0px 25px 7px ;">
+        <p>Our main goal for creating this website is to make education 
+free and more easy and understanding way. Through this website
+ we want to achieve and make sure that every  student is receiving
+quality education free of cost. Our Free online study resources 
+ provide access to a wide range of learning materials. These resources
+include online courses, video lectures and study materials. We offer a 
+vast library of free courses covering various topics Here we also take care of
+ wealth of educational content and language learning resources. Overall, We offer a 
+ convenient, free and better way to learn new skills and acquire knowledge from the comfort of your own home. </p>
+<br>
+	<div style="display: flex;">
+<p>Any student can access a vast range of material which are absolutely free to use and can gain knowledge
+	 by using various things which we provided and this website is developed on sole purpose of making learning
+	  easier and can help students to gain knowledge in fun and effective way. we provide  Easy online learning which
+	   has become increasingly popular in recent years, providing individuals with the flexibility and convenience to learn
+	    at their own pace and schedule. With a variety of platforms and resources available, we make it easier to access educational
+		 content on a range of topics. we offer a wide range of benefits such as the ability to learn from anywhere,  interactive tools
+		  and the ability to connect with a global community of learners. Overall, the way we provide is a great way to enhance skills, 
+		  gain new knowledge, and pursue personal and professional development.</p> 
+		  <img src="../images/imgs/ai.png" alt="svg" style=" width:20rem;">
+</div>      
+<br>
+<p>In this website we also used firebase authentication for login purposes. Firebase Authentication is a
+	 service by Google's Firebase platform that simplifies user authentication in apps. Users can log in 
+	 using email, password, phone number, or third-party providers like Google or Facebook. After authentication,
+	  user data can be retrieved from the Firebase Authentication SDK. The SDK provides easy-to-use methods for sign-in
+	   and managing user sessions, ensuring data security. Overall, Firebase Authentication offers a convenient and secure
+	    way to implement user authentication in your app</p>
+<br>
+<p>In this website we also used ChatGPT for the users to explore more and in efficient way ChatGPT is a large language
+	 model developed by OpenAI that can engage in natural language conversations with humans. ChatGPT is trained on a diverse 
+	 range of texts, enabling it to understand and respond to a wide variety of topics. ChatGPT uses deep learning algorithms and 
+	 natural language processing techniques to generate human-like responses to user inputs. Overall, ChatGPT provides an accessible 
+	 and convenient way to get answers to questions or engage in conversational experiences. With the help of ChatGPT user can dive into 
+	 various things which helps the user to learn new thinhs and get clarified from almost all of the doubts in an short amount of time which 
+	 is most required in online study</p>
+</div>
+</div>
+
+	<!-- FOOTER -->
+	<footer>
+		<div class="footer-container">
+			<div class="left-col">
+				<img src="../images/icon/logo - Copy.png" style="width: 200px;">
+				<div class="logo"></div>
+				<div class="social-media">
+					<a href="#"><img src="../images/icon\fb.png"></a>
+					<a href="#"><img src="../images/icon\insta.png"></a>
+					<a href="#"><img src="../images/icon\tt.png"></a>
+					<a href="#"><img src="../images/icon\ytube.png"></a>
+					<a href="#"><img src="../images/icon\linkedin.png"></a>
+				</div><br><br>
+				<p class="rights-text">Copyright © 2023 Created By Team KAMP IV ,
+					<br> All Rights Reserved.</p>
+				<br><p><img src="../images/icon/location.png">Indian Institute Of
+					Information Technology , Lucknow <br>Ahmamau,Lucknow - 226002
+				</p><br>
+				<p><img src="../images/icon/phone.png"> +91-1234-567-890<br><img
+						src="../images/icon/mail.png">&nbsp; KAMPIV@gmail.com</p>
 			</div>
-    
-
-			<!-- FOOTER -->
-			<footer>
-				<div class="footer-container">
-					<div class="left-col">
-						<img src="../images/icon/logo - Copy.png" style="width: 200px;">
-						<div class="logo"></div>
-						<div class="social-media">
-							<a href="#"><img src="../images/icon\fb.png"></a>
-							<a href="#"><img src="../images/icon\insta.png"></a>
-							<a href="#"><img src="../images/icon\tt.png"></a>
-							<a href="#"><img src="../images/icon\ytube.png"></a>
-							<a href="#"><img src="../images/icon\linkedin.png"></a>
-						</div><br><br>
-						<p class="rights-text">Copyright © 2023 Created By Team KAMP IV ,
-							<br> All Rights Reserved.</p>
-						<br><p><img src="../images/icon/location.png">Indian Institute Of
-							Information Technology , Lucknow <br>Ahmamau,Lucknow - 226002
-						</p><br>
-						<p><img src="../images/icon/phone.png"> +91-1234-567-890<br><img
-								src="../images/icon/mail.png">&nbsp; KAMPIV@gmail.com</p>
-					</div>
-					<div class="right-col">
-						<h1 style="color: #fff">Our Newsletter</h1>
-						<div class="border"></div><br>
-						<p>Enter Your Email to get our News and updates.</p>
-						<form class="newsletter-form">
-							<input class="txtb" type="email" placeholder="Enter Your Email">
-							<input class="btn" type="submit" value="Submit">
-						</form>
-					</div>
-				</div>
-			</footer>
-
-		</body>
-	</html>
+			<div class="right-col">
+				<h1 style="color: #fff">Our Newsletter</h1>
+				<div class="border"></div><br>
+				<p>Enter Your Email to get our News and updates.</p>
+				<form class="newsletter-form">
+					<input class="txtb" type="email" placeholder="Enter Your Email">
+					<input class="btn" type="submit" value="Submit">
+				</form>
+			</div>
+		</div>
+	</footer>
+	<script src="../script.js"></script>
+</body>
+</html>
