Style changes, who said designers had all the fun
Beautification (to some  extent)  for  about us page. Thanks @rootCircle

--- a/aboutus/about_web.html
+++ b/aboutus/about_web.html
@@ -6,9 +6,22 @@
 		<link rel="stylesheet" type="text/css" href="about_web.css">
 	</head>
 	<body>
-
+		<!-- Navigation Bar -->
+		<header id="header">
+			<nav>
+				<div class="logo"><img src="../images/icon/logo.png" alt="logo"></div>
+				<ul>
+					<li><a href="../index.html">Home</a></li>
+					<li><a class="active" href="#">About Us</a></li>
+					<li><a href="../gallery/gallery.html">Gallery</a></li>
+				</ul>
+				<div class="srch" ><a href="../search/search.html"><button class="btn55" >SEARCH</button></a></div>
+				<a class="get-started" href="../login.html">Get Started</a>
+			</nav>
+		</header>
 		<!-- NAVIGATION -->
-		<header>
+		<!-- <header>
+			<nav>
 			<div class="nav" id="nav">
 				<div id="learned-logo">
 					<a href="../index.html"><img src="../images/icon/logo.png" style="width:
@@ -25,7 +38,8 @@
 					
 			</div>
             <br><br>
-        </header>
+			</nav>
+        </header> -->
 		<h1 class="head-container">ABOUT US</h1>
 <!-- <div class="head-container"> -->
 			<div class="manish">
